--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,48 @@
-<div class="flex w-full h-full flex-col justify-center items-center sm:p-20 gap-2">
-  <div class="flex flex-wrap py-10">
-    <h1 class="text-6xl text-center font-bold">Curriculum Management System</h1>
-  </div>
-  <div class="flex flex-col shadow border rounded-lg w-[500px] h-[500px] p-4 items-center justify-center gap-4 bg-base-100">
-    <input type="text" placeholder="Enter username" class="input input-bordered input-neutral w-full max-w-xs" />
-    <input type="text" placeholder="Enter password" class="input input-bordered input-neutral w-full max-w-xs" />
-    <div class="flex flex-row gap-4 items-center w-full max-w-xs">
-      <div class="flex">
-        <label class="label cursor-pointer gap-4">
-          <input type="checkbox" checked="checked" class="checkbox checkbox-success" />
-          <span class="label-text">Remember me</span>
-        </label>
-      </div>
-      <div>
-        <a class="link">Forgot password?</a>
-      </div>
+<div class="flex min-h-screen h-full min-w-full bg-base-200 justify-center">
+  <div class="flex flex-col justify-center items-center sm:p-20 gap-2">
+    <div class="flex flex-wrap py-10">
+      <h1 class="text-6xl text-center font-bold">
+        Curriculum Management System
+      </h1>
     </div>
-    <button class="btn w-full max-w-xs">Login</button>
+    <form [formGroup]="form">
+      <div
+        class="flex flex-col shadow rounded-lg w-[500px] h-[500px] p-4 items-center justify-center gap-4 bg-base-100">
+        <input
+          type="text"
+          formControlName="email"
+          placeholder="Enter email"
+          class="input input-bordered input-neutral w-full max-w-xs" />
+        <input
+          type="password"
+          formControlName="password"
+          placeholder="Enter password"
+          class="input input-bordered input-neutral w-full max-w-xs" />
+        <div
+          class="flex flex-row gap-4 items-center w-full max-w-xs justify-between">
+          <div class="flex">
+            <label class="label cursor-pointer gap-4">
+              <input
+                formControlName="remember"
+                type="checkbox"
+                checked="checked"
+                class="checkbox checkbox-success" />
+              <span class="label-text">Remember me</span>
+            </label>
+          </div>
+          <div>
+            <a class="link">Forgot password?</a>
+          </div>
+        </div>
+        <label class="label" *ngIf="submitted && invalid">
+          <span class="text-error label-text-alt"
+            >Invalid credentails! Try again</span
+          >
+        </label>
+        <button class="btn w-full max-w-xs" type="submit" (click)="onSubmit()">
+          Login
+        </button>
+      </div>
+    </form>
   </div>
 </div>
