--- a/src/app/curriculum-management/curriculum-management.component.html
+++ b/src/app/curriculum-management/curriculum-management.component.html
@@ -1,11 +1,26 @@
-<div class="flex p-14">
+<div class="flex flex-col p-14">
+  <div class="flex mb-8">
+    <div class="form-control w-full max-w-xs">
+      <label class="label">
+        <span class="label-text">Departments</span>
+      </label>
+      <select class="select select-bordered">
+        <option disabled selected>Select a department</option>
+        <option>All</option>
+        <option>BSIT</option>
+        <option>BLIS</option>
+      </select>
+    </div>
+  </div>
   <div class="flex gap-8 flex-wrap flex-row">
     <app-curriculum-card>
       <div class="flex flex-col p-8 gap-2">
-        <div class="flex">
-          <h1 class="text-2xl font-bold">
-            Bachelor's of Science in Information Technology
-          </h1>
+        <div class="flex flex-row">
+          <div class="flex">
+            <h1 class="text-2xl font-bold">
+              Bachelor's of Science in Information Technology
+            </h1>
+          </div>
         </div>
         <div class="flex">
           <p class="text-base">Submitted By: Rosemarie M. Bautista, DIT</p>
