--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col">
   <div class="flex items-center">
-    <div class="flex tabs">
+    <div class="flex tabs ml-5">
       <a
         class="tab tab-lg tab-lifted"
         [ngClass]="{ 'tab-active': tab === 'active' }"
@@ -38,7 +38,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="text-center" *ngFor="let user of $activeUsers | async">
+            <tr class="text-center" *ngFor="let user of activeUsers$ | async">
               <td class="text-xl">{{ user.first_name }}</td>
               <td class="text-xl">{{ user.middle_name }}</td>
               <td class="text-xl">{{ user.last_name }}</td>
@@ -73,7 +73,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="text-center" *ngFor="let user of $invitedUsers | async">
+            <tr class="text-center" *ngFor="let user of invitedUsers$ | async">
               <td class="text-xl">{{ user.email }}</td>
               <td class="text-xl">{{ user.role_name }}</td>
               <td class="text-xl">{{ user.role_type }}</td>
@@ -92,84 +92,83 @@
         </table>
       </div>
     </ng-container>
+  </div>
+</div>
 
-    <!--  TOAST -->
-    <div class="toast toast-end">
-      <ng-container *ngIf="toast">
-        <div
-          class="alert alert-success"
-          [ngClass]="{ 'alert-success': success, 'alert-error': !success }">
-          <div>
-            <span>{{ message }}</span>
-          </div>
-        </div>
-      </ng-container>
+<!--  TOAST -->
+<div class="toast toast-end">
+  <ng-container *ngIf="toast">
+    <div
+      class="alert alert-success"
+      [ngClass]="{ 'alert-success': success, 'alert-error': !success }">
+      <div>
+        <span>{{ message }}</span>
+      </div>
     </div>
+  </ng-container>
+</div>
 
-    <!--  MODAL -->
+<!--  MODAL -->
+<label
+  for="my-modal-4"
+  class="modal modal-bottom sm:modal-middle cursor-pointer"
+  [ngClass]="{ 'modal-open': invite_open }">
+  <label class="modal-box relative" for="">
     <label
       for="my-modal-4"
-      class="modal modal-bottom sm:modal-middle cursor-pointer"
-      [ngClass]="{ 'modal-open': invite_open }">
-      <label class="modal-box relative" for="">
-        <label
-          for="my-modal-4"
-          (click)="invite_open = !invite_open"
-          class="btn btn-sm btn-circle absolute right-2 top-2"
-          >✕</label
-        >
-        <div class="flex">
-          <form
-            [formGroup]="form"
-            class="flex h-full w-full items-center justify-center">
-            <div
-              class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
-              <h1 class="text-4xl font-bold mb-6">Create new User</h1>
-              <input
-                type="text"
-                formControlName="email"
-                placeholder="Email"
-                class="input input-bordered input-neutral w-full max-w-xs" />
-              <input
-                type="text"
-                formControlName="role_name"
-                placeholder="Role Name"
-                class="input input-bordered input-neutral w-full max-w-xs" />
-              <select
-                class="select select-bordered w-full max-w-xs"
-                formControlName="role_type">
-                <option disabled selected>Select user role</option>
-                <option value="admin">Admin</option>
-                <option value="committee_chair">Committee Chair</option>
-                <option value="committee_member">Committee Member</option>
-                <option value="stakeholder">Stakeholder</option>
-              </select>
-              <button
-                class="btn w-full max-w-xs"
-                type="submit"
-                (click)="onSubmit()">
-                INVITE
-              </button>
-            </div>
-          </form>
+      (click)="invite_open = !invite_open"
+      class="btn btn-sm btn-circle absolute right-2 top-2"
+      >✕</label
+    >
+    <div class="flex">
+      <form
+        [formGroup]="form"
+        class="flex h-full w-full items-center justify-center">
+        <div
+          class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
+          <h1 class="text-4xl font-bold mb-6">Create new User</h1>
+          <input
+            type="text"
+            formControlName="email"
+            placeholder="Email"
+            class="input input-bordered input-neutral w-full max-w-xs" />
+          <input
+            type="text"
+            formControlName="role_name"
+            placeholder="Role Name"
+            class="input input-bordered input-neutral w-full max-w-xs" />
+          <select
+            class="select select-bordered w-full max-w-xs"
+            formControlName="role_type">
+            <option disabled selected>Select user role</option>
+            <option value="admin">Admin</option>
+            <option value="committee_chair">Committee Chair</option>
+            <option value="committee_member">Committee Member</option>
+            <option value="stakeholder">Stakeholder</option>
+          </select>
+          <button
+            class="btn w-full max-w-xs"
+            type="submit"
+            (click)="onSubmit()">
+            INVITE
+          </button>
         </div>
-      </label>
-    </label>
+      </form>
+    </div>
+  </label>
+</label>
 
-    <!-- DELETE MODAL -->
-    <input type="checkbox" id="delete-modal" class="modal-toggle" />
-    <div class="modal cursor-pointer" [ngClass]="{ 'modal-open': delete_open }">
-      <div class="modal-box" for="">
-        <h3 class="font-bold text-lg">Delete User</h3>
-        <p class="py-4">Are you sure you want to delete this record?</p>
-        <div class="modal-action">
-          <label class="btn" (click)="delete()">CONFIRM</label>
-          <label class="btn btn-outline" (click)="delete_open = !delete_open"
-            >CANCEL</label
-          >
-        </div>
-      </div>
+<!-- DELETE MODAL -->
+<input type="checkbox" id="delete-modal" class="modal-toggle" />
+<div class="modal cursor-pointer" [ngClass]="{ 'modal-open': delete_open }">
+  <div class="modal-box" for="">
+    <h3 class="font-bold text-lg">Delete User</h3>
+    <p class="py-4">Are you sure you want to delete this record?</p>
+    <div class="modal-action">
+      <label class="btn" (click)="delete()">CONFIRM</label>
+      <label class="btn btn-outline" (click)="delete_open = !delete_open"
+        >CANCEL</label
+      >
     </div>
   </div>
 </div>
-<!-- md -->
