--- a/src/app/semester-management/semester-management.component.html
+++ b/src/app/semester-management/semester-management.component.html
@@ -1,1 +1,22 @@
-<p>semester-management works!</p>
+<div class="flex overflow-x-auto w-full h-full p-5">
+  <table class="table table-compact w-full text-lg">
+    <thead>
+      <tr class="text-center">
+        <th>Academic Year</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          2020-2021
+        </td>
+        <td>
+          <button class="btn btn-accent bg-accent text-accent-content">
+            delete
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
