--- a/src/app/department-management/department-management.component.html
+++ b/src/app/department-management/department-management.component.html
@@ -1,47 +1,86 @@
 <div class="flex flex-col">
-  <div class="ml-auto flex">
-    <label (click)="createOpen = !createOpen" class="btn btn-wide m-4"
-      >CREATE A DEPARTMENT</label
-    >
+  <div class="flex items-center">
+    <div class="flex tabs ml-5">
+      <a
+        class="tab tab-lg tab-lifted"
+        [ngClass]="{ 'tab-active': tab === 'active' }"
+        (click)="tab = 'active'"
+        >Departments</a
+      >
+      <a
+        class="tab tab-lg tab-lifted"
+        [ngClass]="{ 'tab-active': tab === 'archive' }"
+        (click)="tab = 'archive'"
+        >Archived</a
+      >
+    </div>
+    <div class="ml-auto flex">
+      <label (click)="openCreateDepartmentModal()" class="btn btn-wide m-4"
+        >CREATE A DEPARTMENT</label
+      >
+    </div>
   </div>
   <div class="flex overflow-x-auto w-full h-full p-5">
-    <table class="table table-compact w-full text-lg">
-      <thead>
-        <tr class="text-center">
-          <th>Code</th>
-          <th>Department</th>
-          <th>Description</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="text-center" *ngFor="let department of departments$ | async">
-          <td class="text-xl">{{ department.code }}</td>
-          <td class="text-xl">{{ department.name }}</td>
-          <td class="text-xl">{{ department.description }}</td>
-          <td class="space-x-4 justify-center items-center text-center">
-            <button
-              class="btn btn-primary bg-primary text-primary-content"
-              (click)="
-                setUpdateId(
-                  department.id,
-                  department.code,
-                  department.name,
-                  department.description
-                );
-                updateOpen = !updateOpen
-              ">
-              edit
-            </button>
-            <button
-              class="btn btn-accent bg-accent text-accent-content"
-              (click)="setDeleteId(department.id); deleteOpen = !deleteOpen">
-              delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <ng-container *ngIf="tab === 'active'">
+      <table class="table table-compact w-full text-lg">
+        <thead>
+          <tr class="text-center">
+            <th>Code</th>
+            <th>Department</th>
+            <th>Description</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            class="text-center"
+            *ngFor="let department of departments$ | async">
+            <td class="text-xl">{{ department.code }}</td>
+            <td class="text-xl">{{ department.name }}</td>
+            <td class="text-xl">{{ department.description }}</td>
+            <td class="space-x-4 justify-center items-center text-center">
+              <button
+                class="btn btn-primary bg-primary text-primary-content"
+                (click)="select(department.id); openUpdateDepartmentModal()">
+                edit
+              </button>
+              <button
+                class="btn btn-accent bg-accent text-accent-content"
+                (click)="select(department.id); openDeleteDepartmentModal()">
+                delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </ng-container>
+
+    <ng-container *ngIf="tab === 'archive'">
+      <table class="table table-compact w-full text-lg">
+        <thead>
+          <tr class="text-center">
+            <th>Code</th>
+            <th>Department</th>
+            <th>Description</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="text-center" *ngFor="let department of archives$ | async">
+            <td class="text-xl">{{ department.code }}</td>
+            <td class="text-xl">{{ department.name }}</td>
+            <td class="text-xl">{{ department.description }}</td>
+            <td class="space-x-4 justify-center items-center text-center">
+              <button
+                class="btn btn-primary bg-primary text-primary-content"
+                (click)="select(department.id); restore()">
+                restore
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </ng-container>
   </div>
 </div>
 
@@ -49,11 +88,11 @@
 <label
   for="my-modal-4"
   class="modal modal-bottom sm:modal-middle cursor-pointer"
-  [ngClass]="{ 'modal-open': createOpen }">
+  [ngClass]="{ 'modal-open': createDepartmentModalState }">
   <label class="modal-box relative" for="">
     <label
       for="my-modal-4"
-      (click)="createOpen = !createOpen"
+      (click)="closeCreateDepartmentModal()"
       class="btn btn-sm btn-circle absolute right-2 top-2"
       >✕</label
     >
@@ -82,7 +121,7 @@
           <button
             class="btn w-full max-w-xs"
             type="submit"
-            (click)="onSubmit()">
+            (click)="submitCreateDepartment()">
             CREATE
           </button>
         </div>
@@ -95,11 +134,11 @@
 <label
   for="my-modal-4"
   class="modal modal-bottom sm:modal-middle cursor-pointer"
-  [ngClass]="{ 'modal-open': updateOpen }">
+  [ngClass]="{ 'modal-open': updateDepartmentModalState }">
   <label class="modal-box relative" for="">
     <label
       for="my-modal-4"
-      (click)="updateOpen = !updateOpen"
+      (click)="closeUpdateDepartmentModal()"
       class="btn btn-sm btn-circle absolute right-2 top-2"
       >✕</label
     >
@@ -125,7 +164,10 @@
             formControlName="description"
             placeholder="Description"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <button class="btn w-full max-w-xs" type="submit" (click)="update()">
+          <button
+            class="btn w-full max-w-xs"
+            type="submit"
+            (click)="submitUpdateDepartment()">
             UPDATE
           </button>
         </div>
@@ -136,13 +178,15 @@
 
 <!-- DELETE MODAL -->
 <input type="checkbox" id="delete-modal" class="modal-toggle" />
-<div class="modal cursor-pointer" [ngClass]="{ 'modal-open': deleteOpen }">
+<div
+  class="modal cursor-pointer"
+  [ngClass]="{ 'modal-open': deleteDepartmentModalState }">
   <div class="modal-box" for="">
     <h3 class="font-bold text-lg">Delete Department</h3>
     <p class="py-4">Are you sure you want to delete this record?</p>
     <div class="modal-action">
-      <label class="btn" (click)="delete()">CONFIRM</label>
-      <label class="btn btn-outline" (click)="deleteOpen = !deleteOpen"
+      <label class="btn" (click)="submitDeleteDepartment()">CONFIRM</label>
+      <label class="btn btn-outline" (click)="closeDeleteDepartmentModal()"
         >CANCEL</label
       >
     </div>
@@ -151,12 +195,12 @@
 
 <!--  TOAST -->
 <div class="toast toast-end">
-  <ng-container *ngIf="toastOpen">
+  <ng-container *ngIf="toastModalState">
     <div
       class="alert alert-success"
-      [ngClass]="{ 'alert-success': success, 'alert-error': !success }">
+      [ngClass]="{ 'alert-success': toastColor, 'alert-error': !toastColor }">
       <div>
-        <span>{{ message }}</span>
+        <span>{{ toastMessage }}</span>
       </div>
     </div>
   </ng-container>
