--- a/src/app/department-management/department-management.component.html
+++ b/src/app/department-management/department-management.component.html
@@ -24,7 +24,7 @@
     <ng-container *ngIf="tab === 'active'">
       <table class="table table-compact w-full text-lg">
         <thead>
-          <tr class="text-center">
+          <tr>
             <th>Code</th>
             <th>Department</th>
             <th>Description</th>
@@ -32,9 +32,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr
-            class="text-center"
-            *ngFor="let department of departments$ | async">
+          <tr *ngFor="let department of departments$ | async">
             <td class="text-xl">{{ department.code }}</td>
             <td class="text-xl">{{ department.name }}</td>
             <td class="text-xl">{{ department.description }}</td>
@@ -58,7 +56,7 @@
     <ng-container *ngIf="tab === 'archive'">
       <table class="table table-compact w-full text-lg">
         <thead>
-          <tr class="text-center">
+          <tr>
             <th>Code</th>
             <th>Department</th>
             <th>Description</th>
@@ -66,7 +64,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="text-center" *ngFor="let department of archives$ | async">
+          <tr *ngFor="let department of archives$ | async">
             <td class="text-xl">{{ department.code }}</td>
             <td class="text-xl">{{ department.name }}</td>
             <td class="text-xl">{{ department.description }}</td>
