--- a/src/app/semester-management/semester-management.component.html
+++ b/src/app/semester-management/semester-management.component.html
@@ -1,22 +1,150 @@
-<div class="flex overflow-x-auto w-full h-full p-5">
-  <table class="table table-compact w-full text-lg">
-    <thead>
-      <tr class="text-center">
-        <th>Academic Year</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          2020-2021
-        </td>
-        <td>
-          <button class="btn btn-accent bg-accent text-accent-content">
-            delete
+<div class="flex flex-col">
+  <div class="flex items-center">
+    <div class="ml-5 flex tabs">
+      <a
+        class="tab tab-lg tab-lifted"
+        [ngClass]="{ 'tab-active': tab === 'year' }"
+        (click)="tab = 'year'"
+        >Academic Year</a
+      >
+      <a
+        class="tab tab-lg tab-lifted"
+        [ngClass]="{ 'tab-active': tab === 'term' }"
+        (click)="tab = 'term'"
+        >Term</a
+      >
+    </div>
+    <!-- The button to open modal -->
+    <label
+      for="my-modal-3"
+      class="ml-auto btn btn-wide m-4"
+      (click)="openCreateAcademicYearModal()"
+      >CREATE ACADEMIC YEAR</label
+    >
+  </div>
+  <div class="flex overflow-x-auto w-full h-full p-5">
+    <ng-container *ngIf="tab === 'year'">
+      <table class="table table-compact w-full text-lg">
+        <thead>
+          <tr class="text-center">
+            <th>Start Year</th>
+            <th>End Year</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody class="text-center">
+          <tr *ngFor="let ay of academicYears$ | async">
+            <td>{{ ay.start_year }}</td>
+            <td>{{ ay.end_year }}</td>
+            <td>
+              <button
+                class="btn btn-accent bg-accent text-accent-content"
+                (click)="select(ay.id ?? -1); openDeleteAcademicYearModal()">
+                delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </ng-container>
+
+    <ng-container *ngIf="tab === 'term'">
+      <table class="table table-compact w-full text-lg">
+        <thead>
+          <tr class="text-center">
+            <th>Term</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody class="text-center">
+          <tr *ngFor="let ay of academicYears$ | async">
+            <td>{{ ay.start_year }}</td>
+            <td>
+              <button
+                class="btn btn-accent bg-accent text-accent-content"
+                (click)="select(ay.id ?? -1); openDeleteAcademicYearModal()">
+                delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </ng-container>
+  </div>
+</div>
+
+<div
+  for="my-modal-3"
+  class="modal"
+  [ngClass]="{ 'modal-open': createAcademicYearModalState }">
+  <div class="modal-box relative">
+    <label
+      for="my-modal-3"
+      class="btn btn-sm btn-circle absolute right-2 top-2"
+      (click)="closeCreateAcademicYearModal()"
+      >✕</label
+    >
+    <div class="flex">
+      <form
+        class="flex h-full w-full items-center justify-center"
+        [formGroup]="form">
+        <div
+          class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
+          <h1 class="text-4xl font-bold mb-6">Create New Department</h1>
+          <input
+            type="number"
+            min="1960"
+            max="2099"
+            value="2023"
+            formControlName="start_year"
+            placeholder="Start Year"
+            class="input input-bordered input-neutral w-full max-w-xs" />
+          <input
+            type="number"
+            min="1960"
+            max="2099"
+            value="2024"
+            formControlName="end_year"
+            placeholder="End Year"
+            class="input input-bordered input-neutral w-full max-w-xs disabled" />
+          <button
+            class="btn w-full max-w-xs"
+            type="submit"
+            (click)="onSubmitCreateAcademicYear()">
+            CREATE
           </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- DELETE MODAL -->
+<input type="checkbox" id="delete-modal" class="modal-toggle" />
+<div
+  class="modal cursor-pointer"
+  [ngClass]="{ 'modal-open': deleteAcademicYearModalState }">
+  <div class="modal-box" for="">
+    <h3 class="font-bold text-lg">Delete Department</h3>
+    <p class="py-4">Are you sure you want to delete this record?</p>
+    <div class="modal-action">
+      <label class="btn" (click)="onSubmitDeleteAcademicYear()">CONFIRM</label>
+      <label class="btn btn-outline" (click)="closeDeleteAcademicYearModal()"
+        >CANCEL</label
+      >
+    </div>
+  </div>
+</div>
+
+<!--  TOAST -->
+<div class="toast toast-end">
+  <ng-container *ngIf="toastModalState">
+    <div
+      class="alert alert-success"
+      [ngClass]="{ 'alert-success': toastColor, 'alert-error': !toastColor }">
+      <div>
+        <span>{{ toastMessage }}</span>
+      </div>
+    </div>
+  </ng-container>
 </div>
