updated button color

--- a/src/app/department-management/department-management.component.html
+++ b/src/app/department-management/department-management.component.html
@@ -38,12 +38,12 @@
             <td class="text-xl">{{ department.description }}</td>
             <td class="space-x-4 justify-center items-center text-center">
               <button
-                class="btn btn-primary bg-primary text-primary-content"
+                class="btn btn-secondary bg-secondary text-secondary-content"
                 (click)="select(department.id); openUpdateDepartmentModal()">
                 edit
               </button>
               <button
-                class="btn btn-accent bg-accent text-accent-content"
+                class="btn btn-error bg-error text-error-content"
                 (click)="select(department.id); openDeleteDepartmentModal()">
                 delete
               </button>
@@ -70,7 +70,7 @@
             <td class="text-xl">{{ department.description }}</td>
             <td class="space-x-4 justify-center items-center text-center">
               <button
-                class="btn btn-primary bg-primary text-primary-content"
+                class="btn btn-secondary bg-secondary text-secondary-content"
                 (click)="select(department.id); restore()">
                 restore
               </button>
