--- a/src/app/shared/layouts/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar.component.html
@@ -55,47 +55,53 @@
       <div class="divider"></div>
       <div class="flex flex-col gap-4">
         <li>
-          <a [routerLink]="'dashboard'" [routerLinkActive]="'bg-base-300'"
+          <a
+            [routerLink]="'dashboard'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >Dashboard</a
           >
         </li>
         <li>
-          <a [routerLink]="'user-management'" [routerLinkActive]="'bg-base-300'"
+          <a
+            [routerLink]="'user-management'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >User Management</a
           >
         </li>
         <li>
           <a
             [routerLink]="'curriculum-management'"
-            [routerLinkActive]="'bg-base-300'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >Curriculum Management</a
           >
         </li>
         <li>
           <a
             [routerLink]="'subject-management'"
-            [routerLinkActive]="'bg-base-300'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >Subject Management</a
           >
         </li>
         <li>
           <a
             [routerLink]="'semester-management'"
-            [routerLinkActive]="'bg-base-300'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >Semester Management</a
           >
         </li>
         <li>
           <a
             [routerLink]="'department-management'"
-            [routerLinkActive]="'bg-base-300'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >Department Management</a
           >
         </li>
       </div>
       <div class="flex flex-col mt-auto">
         <li>
-          <a [routerLink]="'settings'" [routerLinkActive]="'bg-base-300'"
+          <a
+            [routerLink]="'settings'"
+            [routerLinkActive]="'bg-primary text-primary-content'"
             >Settings</a
           >
         </li>
